--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0.107"
 env_logger = "0.10.0"
 log = "0.4.20"
 cxx = { version = "1.0.107", features = ["c++20", "c++14", "c++17"] }
-binrw = "0.11.2"
+binrw = "0.12.0"
 nom = "7.1.3"
 md-5 = "0.10.5"
 bytes = "1.5.0"
@@ -38,6 +38,9 @@ itertools = "0.11.0"
 num-traits = "0.2.16"
 clap = { version = "4.4.4", features = ["derive"] }
 secrecy = "0.8.0"
+regex = "1.9.5"
+indexmap = "2.0.1"
+once_cell = "1.18.0"
 
 
 [workspace.dependencies.windows-sys]
@@ -52,3 +55,8 @@ features = [
     "Win32_UI_Shell",
 ]
 
+[profile.release]
+opt-level = 3
+strip = "symbols"
+lto = true
+panic = "abort"
