--- a/data/justfile
+++ b/data/justfile
@@ -1,4 +1,6 @@
 pack: build
+  # target/i686-pc-windows-msvc/debug/kpack.exe \
+
   target/i686-pc-windows-msvc/release/kpack.exe \
     --key 5fWhAHt4zVn2X  --encrypt-key "「How's it going to end?」" \
     -f ./resources/file_list.json \
@@ -6,16 +8,16 @@ pack: build
     ./resources/scenario_info.psb.m \
     ./resources/config_info.psb.m \
     ./resources/script_info.psb.m \
-    # ./resources/movies/acb_001a.mzv \
-    # ./resources/movies/ac_prologue01_en.mzv \
-    # ./resources/movies/ac_prologue01.mzv \
-    # ./resources/movies/ac_prologue02_en.mzv \
-    # ./resources/movies/ac_prologue02.mzv \
-    # ./resources/movies/normal_end.mzv \
-    # ./resources/movies/op_en.mzv \
-    # ./resources/movies/op.mzv \
-    # ./resources/movies/op_silent.mzv \
-    # ./resources/movies/true_end.mzv
+    ./resources/movies/acb_001a.mzv \
+    ./resources/movies/ac_prologue01_en.mzv \
+    ./resources/movies/ac_prologue01.mzv \
+    ./resources/movies/ac_prologue02_en.mzv \
+    ./resources/movies/ac_prologue02.mzv \
+    ./resources/movies/normal_end.mzv \
+    ./resources/movies/op_en.mzv \
+    ./resources/movies/op.mzv \
+    ./resources/movies/op_silent.mzv \
+    ./resources/movies/true_end.mzv
   cp resource.bin ../../AC/
 
 
