--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -23,21 +23,24 @@ add_executable(game_chs
 target_include_directories(game_chs PUBLIC ${DETOURS_INCLUDE_DIRS})
 target_link_libraries(game_chs PUBLIC ${DETOURS_LIBRARY})
 
+set_property(TARGET game_chs PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 
-find_package(nlohmann_json CONFIG REQUIRED)
 
-add_library(anonymouscode_chs SHARED dll.cpp
+add_library(anonymouscode_chs SHARED
+        dll.cpp
         utils/kutils.cpp
-        hooks/hookbase.h
         utils/log.cpp
         #        config.cpp
 )
+set_property(TARGET anonymouscode_chs PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
+
 target_include_directories(anonymouscode_chs PRIVATE utils hooks)
 
 target_include_directories(anonymouscode_chs PRIVATE ${DETOURS_INCLUDE_DIRS})
 target_link_libraries(anonymouscode_chs PRIVATE ${DETOURS_LIBRARY})
 
-target_link_libraries(anonymouscode_chs PRIVATE nlohmann_json::nlohmann_json)
+#find_package(nlohmann_json CONFIG REQUIRED)
+#target_link_libraries(anonymouscode_chs PRIVATE nlohmann_json::nlohmann_json)
 
 set(KDATA_INCLUDE_DIRS
         "${CMAKE_SOURCE_DIR}"
